pgadmin-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      securityContext:
        fsGroup: 5050
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4
          securityContext:
            runAsUser: 5050
          ports:
            - containerPort: 80
              name: pgadminport
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-storage
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  type: NodePort
  ports:
    - port: 80
      nodePort: 30200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default            # change if pgAdmin is in another namespace
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin      # <--- change this to your pgAdmin service name if different
                port:
                  number: 80       # <--- change this to your pgAdmin service port if different
